--- a/components/patient-data/impl/src/main/resources/ApplicationResources_es.properties
+++ b/components/patient-data/impl/src/main/resources/ApplicationResources_es.properties
@@ -331,6 +331,10 @@ PhenoTips.GeneVariantClass.variantTable.newEntry=A\u00f1adir variante
 PhenoTips.GeneVariantClass.collapse=Ocultar variantes
 PhenoTips.GeneVariantClass.expand=Mostrar variantes
 PhenoTips.GeneVariantClass.variantAlreadyExist=Esta variante ya ha sido introducida.
+PhenoTips.GeneVariantClass.chromosome=Cromosoma
+PhenoTips.GeneVariantClass.start_position=Posici\u00f3n de salida
+PhenoTips.GeneVariantClass.end_position=Posici\u00f3n final
+PhenoTips.GeneVariantClass.reference_genome=Genoma de referencia
 
 phenotips.vcf.title=Carga de archivo VCF
 phenotips.vcf.sheetTitle=Datos de secuenciaci\u00f3n del exoma
